@@ -10,41 +10,44 @@
 package org.elasticsearch.validation;
 
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.ClusterSettings;
-import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.junit.BeforeClass;
 
-import java.util.HashSet;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Set;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class DotPrefixValidatorTests extends ESTestCase {
-    private final OperatorValidator<?> opV = new OperatorValidator<>();
-    private final NonOperatorValidator<?> nonOpV = new NonOperatorValidator<>();
-    private static final Set<Setting<?>> settings;
+    private final OperatorValidator<?> opV = new OperatorValidator<>(true);
+    private final NonOperatorValidator<?> nonOpV = new NonOperatorValidator<>(true);
 
     private static ClusterService clusterService;
-    private static ClusterSettings clusterSettings;
-
-    static {
-        Set<Setting<?>> cSettings = new HashSet<>(ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
-        cSettings.add(DotPrefixValidator.VALIDATE_DOT_PREFIXES);
-        settings = cSettings;
-    }
 
     @BeforeClass
     public static void beforeClass() {
+        List<String> allowed = new ArrayList<>(DotPrefixValidator.IGNORED_INDEX_PATTERNS_SETTING.getDefault(Settings.EMPTY));
+        // Add a new allowed pattern for testing
+        allowed.add("\\.potato\\d+");
+        Settings settings = Settings.builder()
+            .put(DotPrefixValidator.IGNORED_INDEX_PATTERNS_SETTING.getKey(), Strings.collectionToCommaDelimitedString(allowed))
+            .build();
         clusterService = mock(ClusterService.class);
-        clusterSettings = new ClusterSettings(Settings.EMPTY, Sets.newHashSet(DotPrefixValidator.VALIDATE_DOT_PREFIXES));
+        ClusterSettings clusterSettings = new ClusterSettings(
+            settings,
+            Sets.newHashSet(DotPrefixValidator.VALIDATE_DOT_PREFIXES, DotPrefixValidator.IGNORED_INDEX_PATTERNS_SETTING)
+        );
         when(clusterService.getClusterSettings()).thenReturn(clusterSettings);
-        when(clusterService.getSettings()).thenReturn(Settings.EMPTY);
+        when(clusterService.getSettings()).thenReturn(settings);
         when(clusterService.threadPool()).thenReturn(mock(ThreadPool.class));
     }
 
@@ -56,16 +59,21 @@ public class DotPrefixValidatorTests extends ESTestCase {
         opV.validateIndices(Set.of(".regular"));
         assertFails(Set.of("first", ".second"));
         assertFails(Set.of("<.regular-{MM-yy-dd}>"));
+        assertFails(Set.of(".this_index_contains_an_excepted_pattern.ml-annotations-1"));
 
         // Test ignored names
         nonOpV.validateIndices(Set.of(".elastic-connectors-v1"));
         nonOpV.validateIndices(Set.of(".elastic-connectors-sync-jobs-v1"));
         nonOpV.validateIndices(Set.of(".ml-state"));
+        nonOpV.validateIndices(Set.of(".ml-state-000001"));
+        nonOpV.validateIndices(Set.of(".ml-stats-000001"));
         nonOpV.validateIndices(Set.of(".ml-anomalies-unrelated"));
 
         // Test ignored patterns
+        nonOpV.validateIndices(Set.of(".ml-annotations-21309"));
+        nonOpV.validateIndices(Set.of(".ml-annotations-2"));
         nonOpV.validateIndices(Set.of(".ml-state-21309"));
-        nonOpV.validateIndices(Set.of(">.ml-state-21309>"));
+        nonOpV.validateIndices(Set.of("<.ml-state-21309>"));
         nonOpV.validateIndices(Set.of(".slo-observability.sli-v2"));
         nonOpV.validateIndices(Set.of(".slo-observability.sli-v2.3"));
         nonOpV.validateIndices(Set.of(".slo-observability.sli-v2.3-2024-01-01"));
@@ -74,21 +82,46 @@ public class DotPrefixValidatorTests extends ESTestCase {
         nonOpV.validateIndices(Set.of(".slo-observability.summary-v2.3"));
         nonOpV.validateIndices(Set.of(".slo-observability.summary-v2.3-2024-01-01"));
         nonOpV.validateIndices(Set.of("<.slo-observability.summary-v3.3.{2024-10-16||/M{yyyy-MM-dd|UTC}}>"));
+        nonOpV.validateIndices(Set.of(".entities.v1.latest.builtin_services_from_ecs_data"));
+        nonOpV.validateIndices(Set.of(".entities.v1.history.2025-09-16.security_host_default"));
+        nonOpV.validateIndices(Set.of(".entities.v2.history.2025-09-16.security_user_custom"));
+        nonOpV.validateIndices(Set.of(".entities.v5.reset.security_user_custom"));
+        nonOpV.validateIndices(Set.of(".entities.v1.latest.noop"));
+        nonOpV.validateIndices(Set.of(".entities.v92.latest.eggplant.potato"));
+        nonOpV.validateIndices(Set.of("<.entities.v12.latest.eggplant-{M{yyyy-MM-dd|UTC}}>"));
+        nonOpV.validateIndices(Set.of(".monitoring-es-8-thing"));
+        nonOpV.validateIndices(Set.of("<.monitoring-es-8-thing>"));
+        nonOpV.validateIndices(Set.of(".monitoring-logstash-8-thing"));
+        nonOpV.validateIndices(Set.of("<.monitoring-logstash-8-thing>"));
+        nonOpV.validateIndices(Set.of(".monitoring-kibana-8-thing"));
+        nonOpV.validateIndices(Set.of("<.monitoring-kibana-8-thing>"));
+        nonOpV.validateIndices(Set.of(".monitoring-beats-8-thing"));
+        nonOpV.validateIndices(Set.of("<.monitoring-beats-8-thing>"));
+        nonOpV.validateIndices(Set.of(".monitoring-ent-search-8-thing"));
+        nonOpV.validateIndices(Set.of("<.monitoring-ent-search-8-thing>"));
+
+        // Test pattern added to the settings
+        nonOpV.validateIndices(Set.of(".potato5"));
+        nonOpV.validateIndices(Set.of("<.potato5>"));
     }
 
     private void assertFails(Set<String> indices) {
-        nonOpV.validateIndices(indices);
+        var validator = new NonOperatorValidator<>(false);
+        validator.validateIndices(indices);
         assertWarnings(
             "Index ["
-                + indices.stream().filter(i -> i.startsWith(".") || i.startsWith("<.")).toList().getFirst()
+                + indices.stream().filter(i -> i.startsWith(".") || i.startsWith("<.")).toList().get(0)
                 + "] name begins with a dot (.), which is deprecated, and will not be allowed in a future Elasticsearch version."
         );
     }
 
     private class NonOperatorValidator<R> extends DotPrefixValidator<R> {
 
-        private NonOperatorValidator() {
+        private final boolean assertNoWarnings;
+
+        private NonOperatorValidator(boolean assertNoWarnings) {
             super(new ThreadContext(Settings.EMPTY), clusterService);
+            this.assertNoWarnings = assertNoWarnings;
         }
 
         @Override
@@ -102,12 +135,24 @@ public class DotPrefixValidatorTests extends ESTestCase {
         }
 
         @Override
+        void validateIndices(@Nullable Set<String> indices) {
+            super.validateIndices(indices);
+            if (assertNoWarnings) {
+                assertWarnings();
+            }
+        }
+
+        @Override
         boolean isInternalRequest() {
             return false;
         }
     }
 
     private class OperatorValidator<R> extends NonOperatorValidator<R> {
+        private OperatorValidator(boolean assertNoWarnings) {
+            super(assertNoWarnings);
+        }
+
         @Override
         boolean isInternalRequest() {
             return true;
