@@ -18,8 +18,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.SyntheticSourceSupport {
@@ -51,18 +49,14 @@ public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.Synthe
 
     @Override
     public MapperTestCase.SyntheticSourceExample example(int maxValues) {
-        return example(maxValues, false);
+        return example(maxValues, false, false);
     }
 
-    public MapperTestCase.SyntheticSourceExample example(int maxValues, boolean loadBlockFromSource) {
+    public MapperTestCase.SyntheticSourceExample example(int maxValues, boolean loadBlockFromSource, boolean flipOrder) {
         if (ESTestCase.randomBoolean()) {
             Tuple<String, String> v = generateValue();
             Object sourceValue = preservesExactSource() ? v.v1() : v.v2();
-            Object loadBlock = v.v2();
-            if (loadBlockFromSource == false && ignoreAbove != null && v.v2().length() > ignoreAbove) {
-                loadBlock = null;
-            }
-            return new MapperTestCase.SyntheticSourceExample(v.v1(), sourceValue, loadBlock, this::mapping);
+            return new MapperTestCase.SyntheticSourceExample(v.v1(), sourceValue, this::mapping);
         }
         List<Tuple<String, String>> values = ESTestCase.randomList(1, maxValues, this::generateValue);
         List<String> in = values.stream().map(Tuple::v1).toList();
@@ -76,30 +70,22 @@ public class KeywordFieldSyntheticSourceSupport implements MapperTestCase.Synthe
                 validValues.add(v);
             }
         });
-        List<String> outputFromDocValues = new HashSet<>(validValues).stream().sorted().collect(Collectors.toList());
+        List<String> outputFromDocValues = new HashSet<>(validValues).stream().sorted().toList();
 
         Object out;
         if (preservesExactSource()) {
             out = in;
         } else {
             var validValuesInCorrectOrder = store ? validValues : outputFromDocValues;
-            var syntheticSourceOutputList = Stream.concat(validValuesInCorrectOrder.stream(), ignoredValues.stream()).toList();
+            // this is an ugly little hack that flips the order of ignored values, which is important for the text-family fields where the
+            // ordering of produced synthetic source values can be different from what was supplied
+            var syntheticSourceOutputList = flipOrder
+                ? Stream.concat(ignoredValues.stream(), validValuesInCorrectOrder.stream()).toList()
+                : Stream.concat(validValuesInCorrectOrder.stream(), ignoredValues.stream()).toList();
             out = syntheticSourceOutputList.size() == 1 ? syntheticSourceOutputList.get(0) : syntheticSourceOutputList;
         }
 
-        List<String> loadBlock;
-        if (loadBlockFromSource) {
-            // The block loader infrastructure will never return nulls. Just zap them all.
-            loadBlock = in.stream().filter(Objects::nonNull).toList();
-        } else if (docValues) {
-            loadBlock = List.copyOf(outputFromDocValues);
-        } else {
-            // Meaning loading from terms.
-            loadBlock = List.copyOf(validValues);
-        }
-
-        Object loadBlockResult = loadBlock.size() == 1 ? loadBlock.get(0) : loadBlock;
-        return new MapperTestCase.SyntheticSourceExample(in, out, loadBlockResult, this::mapping);
+        return new MapperTestCase.SyntheticSourceExample(in, out, this::mapping);
     }
 
     private Tuple<String, String> generateValue() {
