@@ -13,11 +13,11 @@ import org.elasticsearch.action.admin.indices.stats.IndicesStatsResponse;
 import org.elasticsearch.client.internal.AdminClient;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.client.internal.IndicesAdminClient;
-import org.elasticsearch.cluster.ClusterName;
-import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.client.internal.ProjectClient;
+import org.elasticsearch.cluster.ProjectState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
-import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.common.io.stream.Writeable.Reader;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.core.TimeValue;
@@ -28,8 +28,8 @@ import org.junit.Before;
 import org.mockito.Mockito;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -50,7 +50,9 @@ public class ShrinkActionTests extends AbstractActionTestCase<ShrinkAction> {
         AdminClient adminClient = Mockito.mock(AdminClient.class);
         indicesClient = Mockito.mock(IndicesAdminClient.class);
 
-        Mockito.when(client.admin()).thenReturn(adminClient);
+        ProjectClient projectClient = Mockito.mock(ProjectClient.class);
+        Mockito.when(client.projectClient(Mockito.any())).thenReturn(projectClient);
+        Mockito.when(projectClient.admin()).thenReturn(adminClient);
         Mockito.when(adminClient.indices()).thenReturn(indicesClient);
     }
 
@@ -203,40 +205,35 @@ public class ShrinkActionTests extends AbstractActionTestCase<ShrinkAction> {
 
         LifecyclePolicy policy = new LifecyclePolicy(
             lifecycleName,
-            Collections.singletonMap("warm", new Phase("warm", TimeValue.ZERO, Collections.singletonMap(action.getWriteableName(), action)))
+            Map.of("warm", new Phase("warm", TimeValue.ZERO, Map.of(action.getWriteableName(), action)))
         );
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
-        ClusterState state = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(
-                Metadata.builder()
-                    .putCustom(
-                        IndexLifecycleMetadata.TYPE,
-                        new IndexLifecycleMetadata(
-                            Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                            OperationMode.RUNNING
-                        )
+        ProjectState state = projectStateFromProject(
+            ProjectMetadata.builder(randomProjectIdOrDefault())
+                .putCustom(
+                    IndexLifecycleMetadata.TYPE,
+                    new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.RUNNING)
+                )
+                .put(
+                    indexMetadataBuilder.putCustom(
+                        LifecycleExecutionState.ILM_CUSTOM_METADATA_KEY,
+                        LifecycleExecutionState.builder()
+                            .setPhase(branchStep.getKey().phase())
+                            .setPhaseTime(0L)
+                            .setAction(branchStep.getKey().action())
+                            .setActionTime(0L)
+                            .setStep(branchStep.getKey().name())
+                            .setStepTime(0L)
+                            .build()
+                            .asMap()
                     )
-                    .put(
-                        indexMetadataBuilder.putCustom(
-                            LifecycleExecutionState.ILM_CUSTOM_METADATA_KEY,
-                            LifecycleExecutionState.builder()
-                                .setPhase(branchStep.getKey().phase())
-                                .setPhaseTime(0L)
-                                .setAction(branchStep.getKey().action())
-                                .setActionTime(0L)
-                                .setStep(branchStep.getKey().name())
-                                .setStepTime(0L)
-                                .build()
-                                .asMap()
-                        )
-                    )
-            )
-            .build();
+                )
+        );
         setUpIndicesStatsRequestMock(indexName, withError);
         CountDownLatch countDownLatch = new CountDownLatch(1);
         AtomicBoolean failurePropagated = new AtomicBoolean(false);
@@ -283,117 +280,115 @@ public class ShrinkActionTests extends AbstractActionTestCase<ShrinkAction> {
         );
         List<Step> steps = action.toSteps(client, phase, nextStepKey);
         assertThat(steps.size(), equalTo(action.getAllowWriteAfterShrink() ? 19 : 18));
-        StepKey expectedFirstKey = new StepKey(phase, ShrinkAction.NAME, ShrinkAction.CONDITIONAL_SKIP_SHRINK_STEP);
-        StepKey expectedSecondKey = new StepKey(phase, ShrinkAction.NAME, CheckNotDataStreamWriteIndexStep.NAME);
-        StepKey expectedThirdKey = new StepKey(phase, ShrinkAction.NAME, WaitForNoFollowersStep.NAME);
-        StepKey expectedFourthKey = new StepKey(phase, ShrinkAction.NAME, WaitUntilTimeSeriesEndTimePassesStep.NAME);
-        StepKey expectedFifthKey = new StepKey(phase, ShrinkAction.NAME, ReadOnlyAction.NAME);
-        StepKey expectedSixthKey = new StepKey(phase, ShrinkAction.NAME, CheckTargetShardsCountStep.NAME);
-        StepKey expectedSeventhKey = new StepKey(phase, ShrinkAction.NAME, CleanupShrinkIndexStep.NAME);
-        StepKey expectedEighthKey = new StepKey(phase, ShrinkAction.NAME, GenerateUniqueIndexNameStep.NAME);
-        StepKey expectedNinthKey = new StepKey(phase, ShrinkAction.NAME, SetSingleNodeAllocateStep.NAME);
-        StepKey expectedTenthKey = new StepKey(phase, ShrinkAction.NAME, CheckShrinkReadyStep.NAME);
-        StepKey expectedEleventhKey = new StepKey(phase, ShrinkAction.NAME, ShrinkStep.NAME);
-        StepKey expectedTwelveKey = new StepKey(phase, ShrinkAction.NAME, ShrunkShardsAllocatedStep.NAME);
-        StepKey expectedThirteenKey = new StepKey(phase, ShrinkAction.NAME, CopyExecutionStateStep.NAME);
-        StepKey expectedFourteenKey = new StepKey(phase, ShrinkAction.NAME, ShrinkAction.CONDITIONAL_DATASTREAM_CHECK_KEY);
-        StepKey expectedFifteenKey = new StepKey(phase, ShrinkAction.NAME, ShrinkSetAliasStep.NAME);
-        StepKey expectedSixteenKey = new StepKey(phase, ShrinkAction.NAME, ShrunkenIndexCheckStep.NAME);
-        StepKey expectedSeventeenKey = new StepKey(phase, ShrinkAction.NAME, ReplaceDataStreamBackingIndexStep.NAME);
-        StepKey expectedEighteenKey = new StepKey(phase, ShrinkAction.NAME, DeleteStep.NAME);
-        StepKey expectedNineteenthKey = new StepKey(phase, ShrinkAction.NAME, UpdateSettingsStep.NAME);
+        StepKey preShrinkBranchingKey = new StepKey(phase, ShrinkAction.NAME, ShrinkAction.CONDITIONAL_SKIP_SHRINK_STEP);
+        StepKey checkNotWriteIndex = new StepKey(phase, ShrinkAction.NAME, CheckNotDataStreamWriteIndexStep.NAME);
+        StepKey waitForNoFollowerStepKey = new StepKey(phase, ShrinkAction.NAME, WaitForNoFollowersStep.NAME);
+        StepKey waitTimeSeriesEndTimePassesKey = new StepKey(phase, ShrinkAction.NAME, WaitUntilTimeSeriesEndTimePassesStep.NAME);
+        StepKey readOnlyKey = new StepKey(phase, ShrinkAction.NAME, ReadOnlyAction.NAME);
+        StepKey checkTargetShardsCountKey = new StepKey(phase, ShrinkAction.NAME, CheckTargetShardsCountStep.NAME);
+        StepKey cleanupShrinkIndexKey = new StepKey(phase, ShrinkAction.NAME, ShrinkAction.CLEANUP_SHRINK_INDEX_STEP);
+        StepKey generateShrinkIndexNameKey = new StepKey(phase, ShrinkAction.NAME, GenerateUniqueIndexNameStep.NAME);
+        StepKey setSingleNodeKey = new StepKey(phase, ShrinkAction.NAME, SetSingleNodeAllocateStep.NAME);
+        StepKey allocationRoutedKey = new StepKey(phase, ShrinkAction.NAME, CheckShrinkReadyStep.NAME);
+        StepKey shrinkKey = new StepKey(phase, ShrinkAction.NAME, ResizeIndexStep.SHRINK);
+        StepKey enoughShardsKey = new StepKey(phase, ShrinkAction.NAME, ShrunkShardsAllocatedStep.NAME);
+        StepKey copyMetadataKey = new StepKey(phase, ShrinkAction.NAME, CopyExecutionStateStep.NAME);
+        StepKey dataStreamCheckBranchingKey = new StepKey(phase, ShrinkAction.NAME, ShrinkAction.CONDITIONAL_DATASTREAM_CHECK_KEY);
+        StepKey aliasKey = new StepKey(phase, ShrinkAction.NAME, ShrinkSetAliasStep.NAME);
+        StepKey isShrunkIndexKey = new StepKey(phase, ShrinkAction.NAME, ShrunkenIndexCheckStep.NAME);
+        StepKey replaceDataStreamIndexKey = new StepKey(phase, ShrinkAction.NAME, ReplaceDataStreamBackingIndexStep.NAME);
+        StepKey deleteIndexKey = new StepKey(phase, ShrinkAction.NAME, DeleteStep.NAME);
+        StepKey allowWriteKey = new StepKey(phase, ShrinkAction.NAME, UpdateSettingsStep.NAME);
 
         assertTrue(steps.get(0) instanceof AsyncBranchingStep);
-        assertThat(steps.get(0).getKey(), equalTo(expectedFirstKey));
+        assertThat(steps.get(0).getKey(), equalTo(preShrinkBranchingKey));
         expectThrows(IllegalStateException.class, () -> steps.get(0).getNextStepKey());
-        assertThat(((AsyncBranchingStep) steps.get(0)).getNextStepKeyOnFalse(), equalTo(expectedSecondKey));
+        assertThat(((AsyncBranchingStep) steps.get(0)).getNextStepKeyOnFalse(), equalTo(checkNotWriteIndex));
         assertThat(
             ((AsyncBranchingStep) steps.get(0)).getNextStepKeyOnTrue(),
-            equalTo(action.getAllowWriteAfterShrink() ? expectedNineteenthKey : nextStepKey)
+            equalTo(action.getAllowWriteAfterShrink() ? allowWriteKey : nextStepKey)
         );
 
         assertTrue(steps.get(1) instanceof CheckNotDataStreamWriteIndexStep);
-        assertThat(steps.get(1).getKey(), equalTo(expectedSecondKey));
-        assertThat(steps.get(1).getNextStepKey(), equalTo(expectedThirdKey));
+        assertThat(steps.get(1).getKey(), equalTo(checkNotWriteIndex));
+        assertThat(steps.get(1).getNextStepKey(), equalTo(waitForNoFollowerStepKey));
 
         assertTrue(steps.get(2) instanceof WaitForNoFollowersStep);
-        assertThat(steps.get(2).getKey(), equalTo(expectedThirdKey));
-        assertThat(steps.get(2).getNextStepKey(), equalTo(expectedFourthKey));
+        assertThat(steps.get(2).getKey(), equalTo(waitForNoFollowerStepKey));
+        assertThat(steps.get(2).getNextStepKey(), equalTo(waitTimeSeriesEndTimePassesKey));
 
         assertTrue(steps.get(3) instanceof WaitUntilTimeSeriesEndTimePassesStep);
-        assertThat(steps.get(3).getKey(), equalTo(expectedFourthKey));
-        assertThat(steps.get(3).getNextStepKey(), equalTo(expectedFifthKey));
+        assertThat(steps.get(3).getKey(), equalTo(waitTimeSeriesEndTimePassesKey));
+        assertThat(steps.get(3).getNextStepKey(), equalTo(readOnlyKey));
 
         assertTrue(steps.get(4) instanceof ReadOnlyStep);
-        assertThat(steps.get(4).getKey(), equalTo(expectedFifthKey));
-        assertThat(steps.get(4).getNextStepKey(), equalTo(expectedSixthKey));
+        assertThat(steps.get(4).getKey(), equalTo(readOnlyKey));
+        assertThat(steps.get(4).getNextStepKey(), equalTo(checkTargetShardsCountKey));
 
         assertTrue(steps.get(5) instanceof CheckTargetShardsCountStep);
-        assertThat(steps.get(5).getKey(), equalTo(expectedSixthKey));
-        assertThat(steps.get(5).getNextStepKey(), equalTo(expectedSeventhKey));
+        assertThat(steps.get(5).getKey(), equalTo(checkTargetShardsCountKey));
+        assertThat(steps.get(5).getNextStepKey(), equalTo(cleanupShrinkIndexKey));
 
-        assertTrue(steps.get(6) instanceof CleanupShrinkIndexStep);
-        assertThat(steps.get(6).getKey(), equalTo(expectedSeventhKey));
-        assertThat(steps.get(6).getNextStepKey(), equalTo(expectedEighthKey));
+        assertTrue(steps.get(6) instanceof CleanupGeneratedIndexStep);
+        assertThat(steps.get(6).getKey(), equalTo(cleanupShrinkIndexKey));
+        assertThat(steps.get(6).getNextStepKey(), equalTo(generateShrinkIndexNameKey));
 
         assertTrue(steps.get(7) instanceof GenerateUniqueIndexNameStep);
-        assertThat(steps.get(7).getKey(), equalTo(expectedEighthKey));
-        assertThat(steps.get(7).getNextStepKey(), equalTo(expectedNinthKey));
+        assertThat(steps.get(7).getKey(), equalTo(generateShrinkIndexNameKey));
+        assertThat(steps.get(7).getNextStepKey(), equalTo(setSingleNodeKey));
 
         assertTrue(steps.get(8) instanceof SetSingleNodeAllocateStep);
-        assertThat(steps.get(8).getKey(), equalTo(expectedNinthKey));
-        assertThat(steps.get(8).getNextStepKey(), equalTo(expectedTenthKey));
+        assertThat(steps.get(8).getKey(), equalTo(setSingleNodeKey));
+        assertThat(steps.get(8).getNextStepKey(), equalTo(allocationRoutedKey));
 
         assertTrue(steps.get(9) instanceof ClusterStateWaitUntilThresholdStep);
         assertThat(((ClusterStateWaitUntilThresholdStep) steps.get(9)).getStepToExecute(), is(instanceOf(CheckShrinkReadyStep.class)));
-        // assert in case the threshold is breached we go back to the "cleanup shrunk index" step
-        assertThat(((ClusterStateWaitUntilThresholdStep) steps.get(9)).getNextKeyOnThreshold(), is(expectedNinthKey));
-        assertThat(steps.get(9).getKey(), equalTo(expectedTenthKey));
-        assertThat(steps.get(9).getNextStepKey(), equalTo(expectedEleventhKey));
+        assertThat(((ClusterStateWaitUntilThresholdStep) steps.get(9)).getNextKeyOnThreshold(), is(setSingleNodeKey));
+        assertThat(steps.get(9).getKey(), equalTo(allocationRoutedKey));
+        assertThat(steps.get(9).getNextStepKey(), equalTo(shrinkKey));
 
-        assertTrue(steps.get(10) instanceof ShrinkStep);
-        assertThat(steps.get(10).getKey(), equalTo(expectedEleventhKey));
-        assertThat(steps.get(10).getNextStepKey(), equalTo(expectedTwelveKey));
+        assertTrue(steps.get(10) instanceof ResizeIndexStep);
+        assertThat(steps.get(10).getKey(), equalTo(shrinkKey));
+        assertThat(steps.get(10).getNextStepKey(), equalTo(enoughShardsKey));
 
         assertTrue(steps.get(11) instanceof ClusterStateWaitUntilThresholdStep);
-        assertThat(steps.get(11).getKey(), equalTo(expectedTwelveKey));
-        assertThat(steps.get(11).getNextStepKey(), equalTo(expectedThirteenKey));
+        assertThat(steps.get(11).getKey(), equalTo(enoughShardsKey));
+        assertThat(steps.get(11).getNextStepKey(), equalTo(copyMetadataKey));
         assertThat(
             ((ClusterStateWaitUntilThresholdStep) steps.get(11)).getStepToExecute(),
             is(instanceOf(ShrunkShardsAllocatedStep.class))
         );
-        // assert in case the threshold is breached we go back to the "cleanup shrunk index" step
-        assertThat(((ClusterStateWaitUntilThresholdStep) steps.get(11)).getNextKeyOnThreshold(), is(expectedSeventhKey));
+        assertThat(((ClusterStateWaitUntilThresholdStep) steps.get(11)).getNextKeyOnThreshold(), is(cleanupShrinkIndexKey));
 
         assertTrue(steps.get(12) instanceof CopyExecutionStateStep);
-        assertThat(steps.get(12).getKey(), equalTo(expectedThirteenKey));
-        assertThat(steps.get(12).getNextStepKey(), equalTo(expectedFourteenKey));
+        assertThat(steps.get(12).getKey(), equalTo(copyMetadataKey));
+        assertThat(steps.get(12).getNextStepKey(), equalTo(dataStreamCheckBranchingKey));
 
         assertTrue(steps.get(13) instanceof BranchingStep);
-        assertThat(steps.get(13).getKey(), equalTo(expectedFourteenKey));
+        assertThat(steps.get(13).getKey(), equalTo(dataStreamCheckBranchingKey));
         expectThrows(IllegalStateException.class, () -> steps.get(13).getNextStepKey());
-        assertThat(((BranchingStep) steps.get(13)).getNextStepKeyOnFalse(), equalTo(expectedFifteenKey));
-        assertThat(((BranchingStep) steps.get(13)).getNextStepKeyOnTrue(), equalTo(expectedSeventeenKey));
+        assertThat(((BranchingStep) steps.get(13)).getNextStepKeyOnFalse(), equalTo(aliasKey));
+        assertThat(((BranchingStep) steps.get(13)).getNextStepKeyOnTrue(), equalTo(replaceDataStreamIndexKey));
 
         assertTrue(steps.get(14) instanceof ShrinkSetAliasStep);
-        assertThat(steps.get(14).getKey(), equalTo(expectedFifteenKey));
-        assertThat(steps.get(14).getNextStepKey(), equalTo(expectedSixteenKey));
+        assertThat(steps.get(14).getKey(), equalTo(aliasKey));
+        assertThat(steps.get(14).getNextStepKey(), equalTo(isShrunkIndexKey));
 
         assertTrue(steps.get(15) instanceof ShrunkenIndexCheckStep);
-        assertThat(steps.get(15).getKey(), equalTo(expectedSixteenKey));
-        assertThat(steps.get(15).getNextStepKey(), equalTo(action.getAllowWriteAfterShrink() ? expectedNineteenthKey : nextStepKey));
+        assertThat(steps.get(15).getKey(), equalTo(isShrunkIndexKey));
+        assertThat(steps.get(15).getNextStepKey(), equalTo(action.getAllowWriteAfterShrink() ? allowWriteKey : nextStepKey));
 
         assertTrue(steps.get(16) instanceof ReplaceDataStreamBackingIndexStep);
-        assertThat(steps.get(16).getKey(), equalTo(expectedSeventeenKey));
-        assertThat(steps.get(16).getNextStepKey(), equalTo(expectedEighteenKey));
+        assertThat(steps.get(16).getKey(), equalTo(replaceDataStreamIndexKey));
+        assertThat(steps.get(16).getNextStepKey(), equalTo(deleteIndexKey));
 
         assertTrue(steps.get(17) instanceof DeleteStep);
-        assertThat(steps.get(17).getKey(), equalTo(expectedEighteenKey));
-        assertThat(steps.get(17).getNextStepKey(), equalTo(expectedSixteenKey));
+        assertThat(steps.get(17).getKey(), equalTo(deleteIndexKey));
+        assertThat(steps.get(17).getNextStepKey(), equalTo(isShrunkIndexKey));
 
         if (action.getAllowWriteAfterShrink()) {
             assertTrue(steps.get(18) instanceof UpdateSettingsStep);
-            assertThat(steps.get(18).getKey(), equalTo(expectedNineteenthKey));
+            assertThat(steps.get(18).getKey(), equalTo(allowWriteKey));
             assertThat(steps.get(18).getNextStepKey(), equalTo(nextStepKey));
         }
     }
