@@ -6,12 +6,17 @@
  */
 package org.elasticsearch.xpack.ml.action;
 
+import org.apache.lucene.util.SetOnce;
 import org.elasticsearch.action.admin.cluster.node.stats.NodeStats;
 import org.elasticsearch.action.admin.cluster.node.stats.NodesStatsResponse;
 import org.elasticsearch.action.bulk.FailureStoreMetrics;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
+import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.ProjectId;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.project.TestProjectResolvers;
 import org.elasticsearch.cluster.routing.OperationRouting;
 import org.elasticsearch.cluster.service.ClusterApplierService;
 import org.elasticsearch.cluster.service.ClusterService;
@@ -20,18 +25,21 @@ import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.features.FeatureService;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.IngestService;
 import org.elasticsearch.ingest.IngestStats;
 import org.elasticsearch.ingest.Processor;
+import org.elasticsearch.ingest.SamplingService;
 import org.elasticsearch.license.MockLicenseState;
 import org.elasticsearch.plugins.IngestPlugin;
-import org.elasticsearch.plugins.internal.DocumentParsingProvider;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xpack.core.ml.MachineLearningField;
 import org.elasticsearch.xpack.core.ml.inference.ModelAliasMetadata;
 import org.elasticsearch.xpack.ml.inference.ingest.InferenceProcessor;
+import org.elasticsearch.xpack.ml.notifications.InferenceAuditor;
 import org.junit.Before;
 
 import java.time.Instant;
@@ -81,7 +89,8 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                 Map<String, Processor.Factory> processorFactories,
                 String tag,
                 String description,
-                Map<String, Object> config
+                Map<String, Object> config,
+                ProjectId projectId
             ) {
                 return new NotInferenceProcessor();
             }
@@ -96,7 +105,12 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             when(licenseState.isAllowed(MachineLearningField.ML_API_FEATURE)).thenReturn(true);
             factoryMap.put(
                 InferenceProcessor.TYPE,
-                new InferenceProcessor.Factory(parameters.client, parameters.ingestService.getClusterService(), Settings.EMPTY, true)
+                new InferenceProcessor.Factory(
+                    parameters.client,
+                    parameters.ingestService.getClusterService(),
+                    Settings.EMPTY,
+                    new SetOnce<>(mock(InferenceAuditor.class))
+                )
             );
 
             factoryMap.put("not_inference", new NotInferenceProcessor.Factory());
@@ -125,7 +139,9 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                     OperationRouting.USE_ADAPTIVE_REPLICA_SELECTION_SETTING,
                     ClusterService.USER_DEFINED_METADATA,
                     ClusterApplierService.CLUSTER_SERVICE_SLOW_TASK_LOGGING_THRESHOLD_SETTING,
-                    ClusterApplierService.CLUSTER_SERVICE_SLOW_TASK_THREAD_DUMP_TIMEOUT_SETTING
+                    ClusterApplierService.CLUSTER_SERVICE_SLOW_TASK_THREAD_DUMP_TIMEOUT_SETTING,
+                    ClusterApplierService.CLUSTER_APPLIER_THREAD_WATCHDOG_INTERVAL,
+                    ClusterApplierService.CLUSTER_APPLIER_THREAD_WATCHDOG_QUIET_TIME
                 )
             )
         );
@@ -139,8 +155,15 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             Collections.singletonList(SKINNY_INGEST_PLUGIN),
             client,
             null,
-            DocumentParsingProvider.EMPTY_INSTANCE,
-            FailureStoreMetrics.NOOP
+            FailureStoreMetrics.NOOP,
+            TestProjectResolvers.alwaysThrow(),
+            new FeatureService(List.of()) {
+                @Override
+                public boolean clusterHasFeature(ClusterState state, NodeFeature feature) {
+                    return DataStream.DATA_STREAM_FAILURE_STORE_FEATURE.equals(feature);
+                }
+            },
+            mock(SamplingService.class)
         );
     }
 
@@ -149,9 +172,24 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             buildNodeStats(
                 new IngestStats.Stats(2, 2, 3, 4),
                 Arrays.asList(
-                    new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(0, 0, 3, 1), new IngestStats.ByteStats(789, 0)),
-                    new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(1, 1, 0, 1), new IngestStats.ByteStats(123, 123)),
-                    new IngestStats.PipelineStat("pipeline3", new IngestStats.Stats(2, 1, 1, 1), new IngestStats.ByteStats(1234, 5678))
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline1",
+                        new IngestStats.Stats(0, 0, 3, 1),
+                        new IngestStats.ByteStats(789, 0)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline2",
+                        new IngestStats.Stats(1, 1, 0, 1),
+                        new IngestStats.ByteStats(123, 123)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline3",
+                        new IngestStats.Stats(2, 1, 1, 1),
+                        new IngestStats.ByteStats(1234, 5678)
+                    )
                 ),
                 Arrays.asList(
                     Arrays.asList(
@@ -173,9 +211,24 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             buildNodeStats(
                 new IngestStats.Stats(15, 5, 3, 4),
                 Arrays.asList(
-                    new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 3, 1), new IngestStats.ByteStats(5678, 123456)),
-                    new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(1, 1, 0, 1), new IngestStats.ByteStats(111, 222)),
-                    new IngestStats.PipelineStat("pipeline3", new IngestStats.Stats(2, 1, 1, 1), new IngestStats.ByteStats(555, 777))
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline1",
+                        new IngestStats.Stats(10, 1, 3, 1),
+                        new IngestStats.ByteStats(5678, 123456)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline2",
+                        new IngestStats.Stats(1, 1, 0, 1),
+                        new IngestStats.ByteStats(111, 222)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline3",
+                        new IngestStats.Stats(2, 1, 1, 1),
+                        new IngestStats.ByteStats(555, 777)
+                    )
                 ),
                 Arrays.asList(
                     Arrays.asList(
@@ -211,13 +264,21 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats expectedStatsModel1 = new IngestStats(
             new IngestStats.Stats(10, 1, 6, 2),
             Collections.singletonList(
-                new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 6, 2), new IngestStats.ByteStats(6467, 123456))
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline1",
+                    new IngestStats.Stats(10, 1, 6, 2),
+                    new IngestStats.ByteStats(6467, 123456)
+                )
             ),
-            Collections.singletonMap(
-                "pipeline1",
-                Arrays.asList(
-                    new IngestStats.ProcessorStat("inference", "inference", new IngestStats.Stats(120, 12, 0, 1)),
-                    new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
+            Map.of(
+                ProjectId.DEFAULT,
+                Collections.singletonMap(
+                    "pipeline1",
+                    Arrays.asList(
+                        new IngestStats.ProcessorStat("inference", "inference", new IngestStats.Stats(120, 12, 0, 1)),
+                        new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
+                    )
                 )
             )
         );
@@ -225,10 +286,20 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats expectedStatsModel2 = new IngestStats(
             new IngestStats.Stats(12, 3, 6, 4),
             Arrays.asList(
-                new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 6, 2), new IngestStats.ByteStats(6467, 123456)),
-                new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(2, 2, 0, 2), new IngestStats.ByteStats(234, 345))
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline1",
+                    new IngestStats.Stats(10, 1, 6, 2),
+                    new IngestStats.ByteStats(6467, 123456)
+                ),
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline2",
+                    new IngestStats.Stats(2, 2, 0, 2),
+                    new IngestStats.ByteStats(234, 345)
+                )
             ),
-            new HashMap<>() {
+            Map.of(ProjectId.DEFAULT, new HashMap<>() {
                 {
                     put(
                         "pipeline2",
@@ -245,7 +316,7 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                         )
                     );
                 }
-            }
+            })
         );
 
         assertThat(ingestStatsMap, hasEntry("trained_model_1", expectedStatsModel1));
@@ -261,7 +332,10 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats ingestStats = new IngestStats(
             overallStats,
             pipelineNames,
-            IntStream.range(0, pipelineids.size()).boxed().collect(Collectors.toMap(pipelineids::get, processorStats::get))
+            Map.of(
+                ProjectId.DEFAULT,
+                IntStream.range(0, pipelineids.size()).boxed().collect(Collectors.toMap(pipelineids::get, processorStats::get))
+            )
         );
         return new NodeStats(
             mock(DiscoveryNode.class),
