@@ -15,7 +15,6 @@ import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
@@ -52,7 +51,7 @@ public class SecurityFilesTests extends ESTestCase {
         boolean supportsPosixPermissions = Environment.getFileStore(path).supportsFileAttributeView(PosixFileAttributeView.class);
         assumeTrue("Ignoring because posix file attributes are not supported", supportsPosixPermissions);
 
-        Files.write(path, "foo".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, "foo");
 
         Set<PosixFilePermission> perms = Sets.newHashSet(OWNER_READ, OWNER_WRITE);
         if (randomBoolean()) perms.add(OWNER_EXECUTE);
@@ -78,7 +77,7 @@ public class SecurityFilesTests extends ESTestCase {
     public void testFailure() throws IOException {
         final Path path = createTempFile("existing", "file");
 
-        Files.write(path, "foo".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, "foo");
 
         final Visitor innerVisitor = new Visitor(path);
         final RuntimeException re = expectThrows(
@@ -138,8 +137,8 @@ public class SecurityFilesTests extends ESTestCase {
         try (FileSystem fs = Jimfs.newFileSystem(jimFsConfiguration)) {
             Path path = fs.getPath("foo");
             Path tempPath = fs.getPath("bar");
-            Files.write(path, "foo".getBytes(StandardCharsets.UTF_8));
-            Files.write(tempPath, "bar".getBytes(StandardCharsets.UTF_8));
+            Files.writeString(path, "foo");
+            Files.writeString(tempPath, "bar");
 
             PosixFileAttributeView view = Files.getFileAttributeView(path, PosixFileAttributeView.class);
             view.setGroup(fs.getUserPrincipalLookupService().lookupPrincipalByGroupName(randomAlphaOfLength(10)));
